--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -14,11 +14,15 @@
   }
 }
 
-@mixin icons() {
-  font-size: 1.275rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+@mixin icon() {
+  padding: 0.75rem 1rem;
+  font-size: 1.7rem;
+  a {
+    color: var(--color-light);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 @mixin button() {
