update redux and components

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -53,6 +53,8 @@
         span {
           font-size: 1.7rem;
           font-weight: 500;
+          font-family: var(--font-secondary);
+          font-style: italic;
           @include breakpoint(sm) {
             font-size: 1.9rem;
           }
