--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,15 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Mukta:700');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&display=swap');
 
 :root {
-  --font-primary: 'Poppins', sans-serif;
-  --font-secondary: 'Mukta', sans-serif;
+  --font-primary: 'Source Sans Pro', sans-serif;
+  --font-secondary: 'Playfair Display', serif;
 
   // colors
   --color-dark: rgb(29, 29, 29);
   --color-light: rgb(244, 244, 255);
   --color-light-white: rgb(245, 245, 245);
   --color-light-gray: rgb(211, 211, 211);
+  --color-medium-gray: rgb(178, 178, 178);
   --color-primary: rgb(184, 174, 121);
   --color-secondary: rgb(184, 212, 203);
   --color-black: #000;
