--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -39,9 +39,6 @@
     align-items: center;
     justify-content: center;
     transition: 0.3s ease all;
-    &:hover {
-      color: var(--color-primary);
-    }
   }
 }
 
@@ -58,7 +55,7 @@
   vertical-align: middle;
 }
 
-@mixin productHeader() {
+@mixin header() {
   position: relative;
   display: flex;
   overflow: hidden;
