--- a/src/pages/Products/ProductItem/ProductItem.module.scss
+++ b/src/pages/Products/ProductItem/ProductItem.module.scss
@@ -5,10 +5,10 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  grid-column-start: span 6;
-  grid-column-end: span 6;
+  grid-column-start: span 12;
+  grid-column-end: span 12;
 
-  @include breakpoint(md) {
+  @include breakpoint(sm) {
     grid-column-start: span 4;
     grid-column-end: span 4;
   }
@@ -43,8 +43,9 @@
     padding-top: 1rem;
 
     button {
+      @include button();
       margin-right: 0.5rem;
-      cursor: pointer;
+      padding: 0.2rem 1rem;
     }
   }
 }
