--- a/src/pages/Cart/Cart.module.scss
+++ b/src/pages/Cart/Cart.module.scss
@@ -54,9 +54,9 @@
         justify-content: center;
         align-items: center;
         margin-bottom: 3rem;
-        padding-top: 2rem;
+        margin-top: 2rem;
         width: 60%;
-        margin: 0 auto;
+        margin: 2rem auto;
 
         &__divider {
           flex-grow: 1;
@@ -79,6 +79,17 @@
             letter-spacing: 0.1rem;
           }
         }
+      }
+
+      &__item {
+        position: relative;
+        width: 60%;
+        margin: auto;
+        margin-top: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
       }
     }
 
