update components and images

--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -11,7 +11,10 @@
       background: var(--color-light);
       pointer-events: none;
       position: absolute;
-      padding: 2rem;
+      padding: 1.2rem;
+      @include breakpoint(sm) {
+        padding: 2rem;
+      }
     }
   }
 }
