--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -27,12 +27,16 @@
       position: absolute;
       top: 30%;
       z-index: 1;
-      width: 75%;
-      height: 20%;
+      width: 100%;
+      height: 15%;
       color: var(--color-light);
       display: flex;
       justify-content: center;
       align-items: center;
+      @include breakpoint(sm) {
+        width: 75%;
+        height: 20%;
+      }
 
       &__main {
         font-size: 1.5rem;
