--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -26,10 +26,9 @@
   &__content {
     margin: 0 auto;
     display: flex;
-    flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    padding: 1.4rem 0;
+    padding: 1rem 0;
     color: var(--color-light);
     max-width: 71.25rem;
 
@@ -43,11 +42,15 @@
       text-decoration: none;
       color: var(--color-light);
       transition: 0.3s ease all;
-      font-size: 1.575rem;
+      font-size: 1.175rem;
       font-weight: bold;
       font-family: var(--font-secondary);
       font-style: italic;
       letter-spacing: 1px;
+
+      @include breakpoint(sm) {
+        font-size: 1.575rem;
+      }
     }
 
     &__links {
@@ -133,12 +136,14 @@
       cursor: pointer;
       display: flex;
       align-items: center;
-      font-size: 1.7rem;
+      font-size: 1.4rem;
       transition: 0.3s ease all;
       position: relative;
       z-index: 301;
       padding: 0.75rem 1rem;
-
+      @include breakpoint(sm) {
+        font-size: 1.7rem;
+      }
       @include breakpoint(md) {
         display: none;
       }
