--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,7 +8,7 @@
   // colors
   --color-dark: rgb(29, 29, 29);
   --color-light: rgb(244, 244, 255);
-  --color-light-white: rgb(245, 245, 245);
+  --color-white: rgb(255, 255, 255);
   --color-light-gray: rgb(211, 211, 211);
   --color-medium-gray: rgb(178, 178, 178);
   --color-primary: rgb(184, 174, 121);
