--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -1,5 +1,25 @@
 @import './../../styles//mixins.scss';
 @import './../../styles//variables.scss';
+.header {
+  @include header();
+  position: relative;
+
+  &__text {
+    top: auto;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 12%;
+    right: auto;
+    position: absolute;
+    color: var(--color-white);
+    font-size: 1.257rem;
+    letter-spacing: 0.05rem;
+
+    @include breakpoint(lg) {
+      font-size: 2.157rem;
+    }
+  }
+}
 
 .carousel {
   margin: 5rem auto;
