--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -14,22 +14,6 @@
   }
 }
 
-@mixin button() {
-  text-transform: uppercase;
-  cursor: pointer;
-  font-family: inherit;
-  background: transparent;
-  color: var(--color-primary);
-  border: 2px solid var(--color-primary);
-  transition: ease-out 0.5s;
-  font-size: 1.045rem;
-  font-weight: 500;
-  &:hover {
-    color: var(--color-dark);
-    border: 2px solid var(--color-dark);
-  }
-}
-
 @mixin icon() {
   padding: 0.75rem 1rem;
   font-size: 1.4rem;
@@ -65,9 +49,16 @@
   img {
     height: 400px;
     align-self: center;
+
     @include breakpoint(md) {
       width: 100%;
       height: auto;
+      align-self: center;
+    }
+
+    @include breakpoint(lg) {
+      height: 100vh;
+      width: auto;
       align-self: center;
     }
   }
