--- a/src/pages/Products/ProductDescription/ProductDescription.module.scss
+++ b/src/pages/Products/ProductDescription/ProductDescription.module.scss
@@ -1,6 +1,10 @@
 @import './../../../styles//mixins.scss';
 @import './../../../styles//variables.scss';
 
+.header {
+  @include header();
+}
+
 .productDetail {
   padding: 0 1.5rem;
   margin: 5rem 0;
