--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,8 +2,6 @@
 @import './../../styles//variables.scss';
 
 .modal {
-  width: 100%;
-  height: 100%;
   background: rgba(0, 0, 0, 0.8);
   position: fixed;
   display: flex;
@@ -17,44 +15,70 @@
   z-index: 5000;
 
   &__wrapper {
-    width: 800px;
-    height: 600px;
     box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+    padding: 4rem;
     background: var(--color-white);
     color: var(--color-black);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
     position: relative;
-    z-index: 10;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    animation-name: slideDown;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-in-out;
+    width: 400px;
+    height: 700px;
 
-    &__image {
-      background: var(--color-light);
-      color: var(--color-black);
+    @keyframes slideDown {
+      0% {
+        left: -100%;
+      }
+
+      100% {
+        left: 0px;
+      }
     }
 
-    &__details {
-      h3 {
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-between;
-        font-style: normal;
-        font-weight: 300;
-        text-transform: none;
-        letter-spacing: 0.05rem;
-        line-height: 1.08333;
-        letter-spacing: 0.05rem;
-        margin-bottom: 1rem;
-        font-size: 1.4rem;
+    @include breakpoint(sm) {
+      width: 600px;
+      height: 1000px;
+    }
+
+    @include breakpoint(md) {
+      width: 1000px;
+      height: 700px;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @include breakpoint(lg) {
+      width: 1200px;
+      height: 800px;
+    }
+
+    &__image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        max-height: 100%;
+        box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
+
+        @include breakpoint(lg) {
+          max-height: 50vh;
+        }
       }
     }
 
     &__close {
       cursor: pointer;
       position: absolute;
-      top: 20px;
-      right: 20px;
-      width: 32px;
-      height: 32px;
+      top: 15px;
+      right: 15px;
+      font-size: 2rem;
       padding: 0;
       z-index: 10;
       color: var(--color-black);
