--- a/src/pages/Products/ProductItem/ProductItem.module.scss
+++ b/src/pages/Products/ProductItem/ProductItem.module.scss
@@ -16,8 +16,31 @@
     overflow: hidden;
     object-fit: cover;
 
-    img {
-      @include image();
+    &__image {
+      position: relative;
+
+      img {
+        @include image();
+        display: block;
+      }
+
+      &__overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 0.25s;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
   }
 
