--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -15,6 +15,9 @@
       @include breakpoint(sm) {
         padding: 2rem;
       }
+      @include breakpoint(lg) {
+        padding: 2rem 4rem;
+      }
     }
   }
 }
