--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -10,15 +10,12 @@
   position: fixed;
   top: 0;
   padding: 0 1.5rem;
-
   @include breakpoint(sm) {
     padding: 0 3rem;
   }
-
   @include breakpoint(md) {
     padding: 0 5rem;
   }
-
   @include breakpoint(lg) {
     padding: 0 12rem;
   }
@@ -35,9 +32,8 @@
     padding: 1rem 0;
     color: var(--color-light);
     max-width: 71.25rem;
-
     @include breakpoint(lg) {
-      max-width: 150rem;
+      max-width: 90rem;
       padding: 2rem 0;
     }
 
@@ -47,17 +43,12 @@
       text-decoration: none;
       color: var(--color-light);
       transition: 0.3s ease all;
-      font-size: 1.175rem;
+      font-size: 1.575rem;
       font-family: var(--font-secondary);
       font-style: italic;
-      letter-spacing: 1px;
-
-      @include breakpoint(sm) {
+      letter-spacing: 1.5px;
+      @include breakpoint(md) {
         font-size: 1.775rem;
-      }
-
-      @include breakpoint(lg) {
-        font-size: 2.575rem;
       }
     }
 
@@ -81,12 +72,11 @@
       font-size: 1.2rem;
       text-transform: uppercase;
       font-weight: 600;
-
       @include breakpoint(sm) {
         font-size: 1.275rem;
       }
-
       @include breakpoint(md) {
+        font-size: 1.075rem;
         transform: none;
         flex-direction: row;
         background: transparent;
@@ -101,7 +91,6 @@
         display: flex;
         flex-direction: column;
         margin-bottom: var(--spacing-lg);
-
         @include breakpoint(md) {
           flex-direction: row;
           align-items: center;
@@ -111,7 +100,6 @@
         li {
           &:not(:last-child) {
             margin-bottom: var(--spacing-lg);
-
             @include breakpoint(md) {
               margin-bottom: 0;
             }
@@ -129,7 +117,6 @@
             opacity: 1;
             transition: opacity 0.4s ease;
             position: relative;
-
             &::after {
               content: '';
               position: absolute;
@@ -168,15 +155,12 @@
       cursor: pointer;
       display: flex;
       align-items: center;
-      font-size: 1.4rem;
+      font-size: 1.675rem;
       transition: 0.3s ease all;
       position: relative;
       z-index: 301;
       padding: 0.75rem 1rem;
 
-      @include breakpoint(sm) {
-        font-size: 1.7rem;
-      }
       @include breakpoint(md) {
         display: none;
       }
