--- a/src/pages/Products/ProductItem/ProductItem.module.scss
+++ b/src/pages/Products/ProductItem/ProductItem.module.scss
@@ -6,9 +6,11 @@
   flex-direction: column;
   overflow: hidden;
   grid-column-start: span 6;
+  padding: 0 1rem;
 
   @include breakpoint(sm) {
-    grid-column-start: span 4;
+    grid-column-start: span 3;
+    padding: 0;
   }
 
   &__container {
@@ -36,24 +38,46 @@
         align-items: center;
         opacity: 0;
         transition: opacity 0.25s;
-
         &:hover {
           opacity: 1;
+        }
+
+        button {
+          padding: 1.5rem 2rem;
+          font-size: 0.7rem;
+          text-transform: uppercase;
+          cursor: pointer;
+          font-family: inherit;
+          font-weight: 500;
+          letter-spacing: 1.5px;
+          background: var(--color-white);
+          border: none;
+          @include breakpoint(md) {
+            padding: 1.1rem 2.8rem;
+            font-size: 1.055rem;
+          }
         }
       }
     }
   }
 
   &__description {
-    padding-bottom: 1rem;
+    font-size: 1.027rem;
+    padding: 1rem 0;
+    @include breakpoint(md) {
+      font-size: 1.127rem;
+    }
 
     &__main {
       display: flex;
       justify-content: space-between;
-      padding: 0.5rem 0;
+
+      h3 {
+        font-weight: 600;
+      }
 
       p {
-        font-weight: bold;
+        font-weight: 400;
       }
     }
   }
