--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -2,7 +2,7 @@
 @import './../../styles//variables.scss';
 
 .header {
-  @include header();
+  @include productHeader();
   position: relative;
   &__text {
     position: absolute;
