--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -28,8 +28,8 @@
     animation-name: slideDown;
     animation-duration: 0.5s;
     animation-timing-function: ease-in-out;
-    width: 400px;
-    height: 800px;
+    width: 25rem;
+    height: 52rem;
 
     @keyframes slideDown {
       0% {
@@ -42,19 +42,14 @@
     }
 
     @include breakpoint(sm) {
-      width: 600px;
-      height: 1000px;
+      width: 30rem;
+      height: 60rem;
     }
 
     @include breakpoint(md) {
-      width: 1000px;
-      height: 750px;
+      width: 60rem;
+      height: 47rem;
       grid-template-columns: 1fr 1fr;
-    }
-
-    @include breakpoint(lg) {
-      width: 1200px;
-      height: 750px;
     }
 
     &__image {
@@ -65,12 +60,6 @@
       img {
         max-height: 100%;
         box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
-        @include breakpoint(sm) {
-          max-height: 40vh;
-        }
-        @include breakpoint(lg) {
-          max-height: 40vh;
-        }
       }
     }
 
@@ -78,6 +67,8 @@
       text-align: center;
       letter-spacing: 1.5px;
       line-height: 1.6;
+      margin-left: 1rem;
+
       h2 {
         font-size: 1.875rem;
         font-weight: 600;
