--- a/src/pages/Cart/CartEmpty/CartEmpty.module.scss
+++ b/src/pages/Cart/CartEmpty/CartEmpty.module.scss
@@ -5,7 +5,11 @@
   width: 100%;
 
   p {
-    font-size: 1rem;
+    font-size: 1.1rem;
     text-align: center;
+    font-weight: 300;
+    @include breakpoint(md) {
+      font-size: 1.275rem;
+    }
   }
 }
