--- a/src/pages/Cart/CartItem/CartItem.module.scss
+++ b/src/pages/Cart/CartItem/CartItem.module.scss
@@ -2,35 +2,111 @@
 @import './../../../styles//variables.scss';
 
 .cartItem {
-  display: flex;
-  margin-bottom: 2rem;
-  justify-content: space-between;
-  width: 100%;
+  background: var(--color-light);
+  &__item {
+    padding-bottom: 3rem;
 
-  &__description {
-    display: flex;
-    align-items: center;
-    width: 50%;
+    &__image {
+      width: 18.4rem;
+      margin: 0 auto;
 
-    &__info {
-      width: 100%;
-      margin-left: 1rem;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
-  }
 
-  &__icons {
-    display: flex;
-    cursor: pointer;
-    align-items: center;
+    &__details {
+      text-align: center;
 
-    p {
-      border: 1px solid var(--color-black);
-      height: 40px;
-      width: 40px;
+      &__name {
+        font-style: normal;
+        font-weight: 600;
+        text-transform: none;
+        letter-spacing: 1.5px;
+        font-size: 1.2rem;
+        line-height: 1.1;
+        letter-spacing: 0.1rem;
+        text-transform: uppercase;
+        margin-top: 0.6rem;
+      }
+
+      &__price {
+        font-style: normal;
+        font-weight: 400;
+        text-transform: none;
+        letter-spacing: 1.5px;
+        font-size: 1.2rem;
+        line-height: 1.21429;
+        letter-spacing: 0.05rem;
+        margin-top: 0.6rem;
+      }
+    }
+
+    &__buttons {
       display: flex;
+      flex-flow: row wrap;
       justify-content: center;
-      align-items: center;
-      font-size: 1.45rem;
+      margin-top: 1.8rem;
+      position: relative;
+
+      &__controls {
+        display: flex;
+
+        &__quantity {
+          margin-right: 1rem;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+
+          input {
+            width: 2.5rem;
+            height: 1rem;
+            border: 0.5px solid var(--color-black);
+            padding: 1.2rem 0.8rem;
+            text-align: center;
+            -moz-appearance: textfield;
+            opacity: 0.5;
+            cursor: default;
+            font-style: normal;
+            font-weight: 300;
+            text-transform: none;
+            letter-spacing: 0.05rem;
+            font-size: 1.3rem;
+            line-height: 1.125;
+            background-color: transparent;
+            margin: 0;
+            &:active {
+              outline: none;
+            }
+            &:focus {
+              outline: none;
+            }
+          }
+
+          &__icon {
+            font-size: 1.6rem;
+            font-weight: 200;
+            cursor: pointer;
+          }
+        }
+
+        &__remove {
+          font-size: 2rem;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+          cursor: pointer;
+        }
+      }
+    }
+
+    hr {
+      margin-top: 2rem;
+      color: var(--color-light-gray);
     }
   }
 }
