--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -1,12 +1,21 @@
 @import './../../styles//mixins.scss';
 @import './../../styles//variables.scss';
 
-.header {
-  @include productHeader();
-}
-
 .contact {
-  img {
-    height: 400px;
+  background: var(--color-black);
+  position: relative;
+
+  &__image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
+
+    img {
+      width: 100%;
+    }
   }
 }
