--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -12,6 +12,7 @@
     color: var(--color-white);
     font-size: 1.257rem;
     letter-spacing: 1.5px;
+    text-transform: uppercase;
     @include breakpoint(lg) {
       font-size: 2.157rem;
     }
