--- a/src/pages/Account/Account.module.scss
+++ b/src/pages/Account/Account.module.scss
@@ -2,7 +2,7 @@
 @import './../../styles//variables.scss';
 
 .account {
-  background: var(--color-black);
+  background: var(--color-white);
   position: relative;
 
   &__image {
@@ -10,12 +10,16 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: block;
     overflow: hidden;
 
     img {
       width: 100%;
     }
+  }
+
+  &__content {
+    padding-bottom: 38rem;
   }
 }
