--- a/src/pages/Products/ProductItem/ProductItem.module.scss
+++ b/src/pages/Products/ProductItem/ProductItem.module.scss
@@ -65,6 +65,7 @@
     padding: 1rem 0;
     @include breakpoint(md) {
       font-size: 1.127rem;
+      letter-spacing: 1.5px;
     }
 
     &__main {
