--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -52,6 +52,11 @@
       grid-template-columns: 1fr 1fr;
     }
 
+    @include breakpoint(xlg) {
+      width: 80rem;
+      height: 62rem;
+    }
+
     &__image {
       display: flex;
       justify-content: center;
