--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -7,7 +7,9 @@
   &__wrapper {
     width: 100%;
     margin: 0 auto;
-    max-width: 71.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-top: 10rem;
     @include breakpoint(md) {
       padding-top: 11rem;
@@ -15,6 +17,9 @@
     @include breakpoint(lg) {
       max-width: 90rem;
       padding-top: 19.8rem;
+    }
+    @include breakpoint(xlg) {
+      padding-top: 35rem;
     }
 
     &__content {
@@ -31,8 +36,12 @@
         box-shadow: 0 5px 16px rgba(0, 0, 0, 0.2);
         color: var(--color-black);
         margin: 0 1.5rem 1.5rem;
+        width: 25rem;
+        @include breakpoint(sm) {
+          width: 40rem;
+        }
         @include breakpoint(md) {
-          width: 54rem;
+          width: 60rem;
         }
 
         &__header {
