--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -18,6 +18,9 @@
       @include breakpoint(lg) {
         padding: 1.5rem 3.5rem;
       }
+      @include breakpoint(xlg) {
+        padding: 2.5rem 4rem;
+      }
     }
   }
 }
