--- a/src/components/Gallery/GalleryDescription/GalleryDescription.module.scss
+++ b/src/components/Gallery/GalleryDescription/GalleryDescription.module.scss
@@ -12,6 +12,9 @@
     @include breakpoint(lg) {
       font-size: 1.375rem;
     }
+    @include breakpoint(xlg) {
+      font-size: 1.827rem;
+    }
   }
 
   &__category {
@@ -19,6 +22,9 @@
     font-size: 0.7rem;
     @include breakpoint(lg) {
       font-size: 1rem;
+    }
+    @include breakpoint(xlg) {
+      font-size: 1.527rem;
     }
   }
 }
