--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -55,6 +55,9 @@
         @include breakpoint(lg) {
           font-size: 2.075rem;
         }
+        @include breakpoint(xlg) {
+          font-size: 2.675rem;
+        }
       }
 
       h4 {
@@ -67,6 +70,9 @@
         }
         @include breakpoint(lg) {
           font-size: 1.275rem;
+        }
+        @include breakpoint(xlg) {
+          font-size: 1.875rem;
         }
       }
 
