--- a/src/pages/Account/Account.module.scss
+++ b/src/pages/Account/Account.module.scss
@@ -11,15 +11,21 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    display: block;
-    overflow: hidden;
-
-    img {
-      width: 100%;
+    background: url(../../assets/images/heading/img2.jpg) no-repeat center
+      center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    @include breakpoint(lg) {
+      background: url(../../assets/images/heading/img5.jpg) no-repeat center
+        center fixed;
     }
   }
+}
 
-  &__content {
-    padding-bottom: 38rem;
-  }
+.footer {
+  top: 100%;
+  width: 100%;
+  position: absolute;
 }
