--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -2,7 +2,7 @@
 @import './../../styles//variables.scss';
 
 .contact {
-  background: var(--color-black);
+  background: var(--color-white);
   position: relative;
 
   &__image {
@@ -11,11 +11,17 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    display: block;
-    overflow: hidden;
-
-    img {
-      width: 100%;
-    }
+    background: url(../../assets/images/heading/img3.jpg) no-repeat center
+      center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
+}
+
+.footer {
+  top: 100%;
+  width: 100%;
+  position: absolute;
 }
