--- a/src/pages/Products/Products.module.scss
+++ b/src/pages/Products/Products.module.scss
@@ -29,6 +29,9 @@
       @include breakpoint(lg) {
         font-size: 2.075rem;
       }
+      @include breakpoint(xlg) {
+        font-size: 2.675rem;
+      }
     }
 
     h4 {
@@ -40,6 +43,9 @@
       }
       @include breakpoint(lg) {
         font-size: 1.275rem;
+      }
+      @include breakpoint(xlg) {
+        font-size: 1.875rem;
       }
     }
   }
@@ -71,6 +77,9 @@
     }
     @include breakpoint(lg) {
       max-width: 90rem;
+    }
+    @include breakpoint(xlg) {
+      max-width: 120rem;
     }
   }
 }
