--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -62,6 +62,8 @@
       border-radius: 0;
       box-sizing: border-box;
       padding: 1rem;
+      font-weight: 300;
+      font-size: 1.375rem;
       &:active {
         outline: none;
       }
