--- a/src/components/ScrollToButton/ScrollToButton.module.scss
+++ b/src/components/ScrollToButton/ScrollToButton.module.scss
@@ -14,6 +14,10 @@
   width: 50px;
   height: 50px;
   transform: rotate(-45deg);
+  @include breakpoint(lg) {
+    width: 65px;
+    height: 65px;
+  }
   &:hover {
     background: var(--color-dark);
   }
@@ -21,9 +25,17 @@
   &__arrow {
     width: 16px;
     height: 16px;
-    border-left: solid #fff 2px;
-    border-bottom: solid #fff 2px;
+    border-left: solid var(--color-white) 2px;
+    border-bottom: solid var(--color-white) 2px;
     border-right: solid transparent 2px;
     border-top: solid transparent 2px;
+    @include breakpoint(lg) {
+      width: 30px;
+      height: 30px;
+      border-left: solid var(--color-white) 4px;
+      border-bottom: solid var(--color-white) 4px;
+      border-right: solid transparent 4px;
+      border-top: solid transparent 4px;
+    }
   }
 }
